--- a/_config.yml
+++ b/_config.yml
@@ -7,6 +7,24 @@ logo: "/assets/images/coldbrew.png"
 
 permalink: pretty
 
+callouts_level: quiet
+callouts:
+  highlight:
+    color: yellow
+  important:
+    title: Important
+    color: blue
+  new:
+    title: New
+    color: green
+  note:
+    title: Note
+    color: purple
+  warning:
+    title: Warning
+    color: red
+
+
 theme: just-the-docs
 #color_scheme: dark
 plugins:
