--- a/_config.yml
+++ b/_config.yml
@@ -7,6 +7,8 @@ logo: "/assets/images/coldbrew.png"
 
 permalink: pretty
 
+theme: just-the-docs
+
 callouts_level: quiet
 callouts:
   highlight:
@@ -24,10 +26,17 @@ callouts:
     title: Warning
     color: red
 
+# Footer "Edit this page on GitHub" link text
+gh_edit_link: true # show or hide edit this page link
+gh_edit_link_text: "Edit this page on GitHub"
+gh_edit_repository: "https://github.com/go-coldbrew/docs.coldbrew.cloud" # the github URL for your repo
+gh_edit_branch: "main" # the branch that your docs is served from
+# gh_edit_source: docs # the source that your files originate from
+gh_edit_view_mode: "tree" # "tree" or "edit" if you want the user to jump into the editor immediately
 
-theme: just-the-docs
 #color_scheme: dark
 plugins:
   - jekyll-default-layout
   - jekyll-seo-tag
   - jekyll-github-metadata
+  - jekyll-target-blank
