--- a/_config.yml
+++ b/_config.yml
@@ -34,6 +34,8 @@ gh_edit_branch: "main" # the branch that your docs is served from
 # gh_edit_source: docs # the source that your files originate from
 gh_edit_view_mode: "tree" # "tree" or "edit" if you want the user to jump into the editor immediately
 
+ga_tracking: "G-ZRR08Y74FZ"
+
 #color_scheme: dark
 plugins:
   - jekyll-default-layout
